Alignment fixes

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body{
     overflow-x: hidden;
     font-family: 'Montserrat', sans-serif;
     color: white;
+    margin: 0;
+    padding: 0;
 }
 
 .content{
